[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finances"
version = "0.0.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databases",
    "pandas>=2.0.2",  # for converting from polars for plotting
    "polars>=1.0.0",
    "pyarrow",  # same as pandas
    "seaborn",
]

[project.urls]
Homepage = "https://github.com/bfgray3/finances"
Repository = "https://github.com/bfgray3/finances"

[project.scripts]
finances = "finances:main"

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["I", "W", "N", "B", "UP"]

[tool.ruff.lint.isort]
force-single-line = true
